--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,9 @@ favicon:
 excerpt_link: Read more
 
 menu:
- Home: /
- Tags: /tags/
- Archives: /archives/
- Projects: /project/
+ Develop: /develop/
+ Diary: /diary/
+ Archive: /archive/
  About: /about/
 
 # highlight
@@ -43,13 +42,9 @@ baidu_id:
 
 about: 
   banner: http://file.muyutech.com/about.jpg
-  avatar: https://avatars3.githubusercontent.com/u/16443628?v=3&s=460
-  description: "The end is always near."
-  weibo_username: yanm1ng
-  twitter_username: yanm1ng
-  github_username: yanm1ng
-  zhihu_username: yummy1121
-  douban_username: yanm1ng
+#  avatar: https://avatars3.githubusercontent.com/u/16443628?v=3&s=460
+  description: "Software Developer"
+  github_username: Zeniuus
 
 # MathJax Support
 mathjax:
