--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-author: yanm1ng # 作者
-description: yanm1ng's blog
-keyword: hexo-theme, vuejs
+author: Zeniuus # 作者
+description: Suhwan Jee's blog
+keyword: Develop, Backend, Server, Spring
 favicon: 
 
 excerpt_link: Read more
@@ -27,13 +27,13 @@ qrcode: true
 # comment
 # you can set gitment or uyan
 
-comment: gitment
+# comment: gitment
 
 # gitment config
-gitment_owner: yanm1ng
-gitment_repo: yanm1ng.github.io
-gitment_oauth_id: 0f87e490e00ee3fd87ef
-gitment_oauth_secret: 4a9d2b148e7971c2201ad12131ce8bf8159ccd2e
+# gitment_owner: yanm1ng
+# gitment_repo: yanm1ng.github.io
+# gitment_oauth_id: 0f87e490e00ee3fd87ef
+# gitment_oauth_secret: 4a9d2b148e7971c2201ad12131ce8bf8159ccd2e
 
 # uyan
 # if you want to use uyan as your blog comment, plz remove/comment out gitment config
@@ -41,54 +41,54 @@ gitment_oauth_secret: 4a9d2b148e7971c2201ad12131ce8bf8159ccd2e
 baidu_id: 
 
 about: 
-  banner: http://file.muyutech.com/about.jpg
-#  avatar: https://avatars3.githubusercontent.com/u/16443628?v=3&s=460
-  description: "Software Developer"
+  # banner:
+  avatar: https://avatars3.githubusercontent.com/u/24506624?s=460&v=4
+  description: "Software Developer<br/>\n<br/>일을 효율적으로 만드는 것을 좋아합니다. 특히 개발을 쉽게 만드는 것과 자동화에 관심이 많습니다."
   github_username: Zeniuus
 
-experience:
-  Classum:
-    period: Mar. 2018 ~ Current
-    position: Backend Developer
-    description:
-      - Firebase functions with TypeScript
-  SPARCS:
-    period: Mar. 2017 ~ Current
-    position: Developer
-    description:
-      - Product manager of several projects (Zabo, newAra)
-      - Git, Node.js, JavaScript seminars
-  Lendit:
-    period: Jan. 2018 ~ Feb. 2018
-    position: Developer Intern
-    description:
-      - Several tools used internally
-      - Code snippet manager
-  KIXLAB:
-    period: Jul. 2017 ~ Aug. 2018
-    position: Research Intern
-    description:
-      - Asynchronous-interactive feedback interface
+# experience:
+#   Classum:
+#     period: Mar. 2018 ~ Current
+#     position: Backend Developer
+#     description:
+#       - Firebase functions with TypeScript
+#   SPARCS:
+#     period: Mar. 2017 ~ Current
+#     position: Developer
+#     description:
+#       - Product manager of several projects (Zabo, newAra)
+#       - Git, Node.js, JavaScript seminars
+#   Lendit:
+#     period: Jan. 2018 ~ Feb. 2018
+#     position: Developer Intern
+#     description:
+#       - Several tools used internally
+#       - Code snippet manager
+#   KIXLAB:
+#     period: Jul. 2017 ~ Aug. 2018
+#     position: Research Intern
+#     description:
+#       - Asynchronous-interactive feedback interface
 
-skill:
-  Frontend:
-    Vue.js: Intermediate
-  Backend:
-    Node.js: Beginner ~ Intermediate
-    MongoDB: Beginner
-    Spring Boot: Beginner
-    Django: Beginner
-  Language:
-    JavaScript: Intermediate
-    TypeScript: Beginner
-    Java: Beginner
-    Python: Beginner
-  Else:
-    AWS: Once
+# skill:
+#   Frontend:
+#     Vue.js: Intermediate
+#   Backend:
+#     Node.js: Beginner ~ Intermediate
+#     MongoDB: Beginner
+#     Spring Boot: Beginner
+#     Django: Beginner
+#   Language:
+#     JavaScript: Intermediate
+#     TypeScript: Beginner
+#     Java: Beginner
+#     Python: Beginner
+#   Else:
+#     AWS: Once
 
-education: placeholder
+# education: placeholder
 
-projects: placeholder
+# projects: placeholder
 
 # MathJax Support
 mathjax:
