소개 페이지 약간 수정

--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ baidu_id:
 about: 
   # banner:
   avatar: https://avatars3.githubusercontent.com/u/24506624?s=460&v=4
-  description: "Software Developer<br/>\n<br/>일을 효율적으로 만드는 것을 좋아합니다. 특히 개발을 쉽게 만드는 것과 자동화에 관심이 많습니다."
+  description: "Software Engineer<br/>\n<br/>좋은 동료들과 함께 좋은 임팩트를 만들고 싶습니다."
   github_username: Zeniuus
 
 # experience:
